--- a/conf/config.json
+++ b/conf/config.json
@@ -19,8 +19,8 @@
 		},
 		"streamSettings":
 		{
-			"network":"ws",
-			"wsSettings":
+			"network":"h2",
+			"httpSettings":
 			{
 				"path": "WS_PATH"
 			}
